2012-06-30  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (s2k): New.
	(resetcode_s2k): Remove.
	(cmd_reset_user_password, cmd_change_password): Use s2k (was:
	sha256 directly or resetcode_s2k).
	* src/openpgp-do.c (proc_resetting_code, gpg_do_write_prvkey):
	Likewise.
	* src/ac.c (verify_user_0, verify_admin): Likewise.

2012-06-29  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/Makefile: Don't copy usb_lld.c.

2012-06-28  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/204_decryption.feature: New.
	* test/features/203_compute_signature.feature: New.
	* test/features/202_keygen.feature: New.
	* test/features/201_setup_passphrase.feature: New.
	* test/features/200_key_removal.feature: New.

	* test/rsa_keys.py (verify_signature): New.
	(encrypt_with_pubkey): New.

	* test/gnuk.py (gnuk_token): New method: increment_seq.
	(gnuk_token.icc_send_cmd): Handle timeout.
	(gnuk_token.cmd_genkey): New.
	(gnuk_token.cmd_get_public_key): New.

2012-06-27  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/101_decryption.feature: New.
	* test/features/100_compute_signature.feature: New.

	* src/openpgp-do.c (gpg_do_chks_prvkey): Call flash_do_release before
	flash_do_write.
	(gpg_do_write_prvkey): Bug fix when GC occurs.

	* src/openpgp.c (cmd_change_password): Support resetting to
	factory setting of PW3.

	* src/openpgp-do.c (gpg_do_write_prvkey): Don't reset signagure
	counter here.
	(proc_key_import): But reset here.
	Call ac_reset_* when key is imported.

2012-06-26  Niibe Yutaka  <gniibe@fsij.org>

	* test: New.

2012-06-25  Niibe Yutaka  <gniibe@fsij.org>

	* tool/usb_strings.py: New.

2012-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.blank_check): Add blank check of
	Flash ROM.

2012-06-21  Niibe Yutaka  <gniibe@fsij.org>

	* tool/asm-thumb/blank_check.S: New.

2012-06-20  Niibe Yutaka  <gniibe@fsij.org>

	ST-Link/V2 flash ROM writer.
	* tool/stlinkv2.py: New.
	* tool/asm-thumb/opt_bytes_write.S: New.
	* tool/asm-thumb/flash_write.S: New.
